/*
 * Copyright 2019, Allied Telesis Labs New Zealand, Ltd
 */

package cmsg_psd;

import "cmsg.proto";

message publish_data
{
    optional string service = 1;
    optional string method_name = 2;
    optional bytes packet = 3;
}

service publish
{
    rpc send_data (publish_data) returns (dummy);
}
